Fix nav menu item alignment

--- a/mu-plugins/blocks/global-header-footer/postcss/header/get-wordpress.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/get-wordpress.pcss
@@ -8,7 +8,7 @@
 		color: var(--wp--preset--color--white);
 		padding: 10px 19px;
 		border-radius: 2px;
-		font-weight: bold;
+		font-weight: 700;
 
 		& a {
 			margin: 0 auto;
@@ -21,6 +21,11 @@
 
 		@media (--tablet) {
 			display: inline;
+		}
+
+		@media (--short-screen) {
+			padding-top: 18px;
+			padding-bottom: 18px;
 		}
 	}
 
