--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -28,6 +28,7 @@ html {
 		position: sticky;
 		top: var(--wp-admin--admin-bar--height, 0);
 		font-size: var(--wp--preset--font-size--small);
+		line-height: 24px;
 	}
 
 	& > * {
