--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -109,8 +109,8 @@
 			}
 
 			@media (--short-screen) {
-				padding-bottom: 20px;
-				padding-top: 15px;
+				padding-bottom: 18px;
+				padding-top: 18px;
 			}
 		}
 	}
